Fix gap in calendar triangles

--- a/frontend/less/style.less
+++ b/frontend/less/style.less
@@ -1252,7 +1252,7 @@ div.dataTables_filter input {
       border-width: 15px;
       left: auto;
       right: -15px;
-      margin-top: -3px; 
+      margin-top: -3px;
     }
     &.fc-list-item{
        border-right-width: 28px;
@@ -1279,7 +1279,7 @@ div.dataTables_filter input {
     border-left-color: white;
     border-left-style: solid;
     &.fc-day-grid-event:before, &>.fc-widget-content:before {
-      left: -34px;
+      left: -32px;
       border: solid transparent;
       content: " ";
       height: 0;
